Basic state file

--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -87,6 +87,9 @@
     <Reference Include="QuickFont.ES20, Version=4.5.7053.25690, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\QuickFont.ES20.4.5.7053.25690\lib\net45\QuickFont.ES20.dll</HintPath>
     </Reference>
+    <Reference Include="Secretary">
+      <HintPath>..\..\..\..\Documents\Secretary2.0\Secretary.dll</HintPath>
+    </Reference>
     <Reference Include="SharpFont, Version=4.0.1.200, Culture=neutral, PublicKeyToken=48add4c483071cdf, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpFont.4.0.1\lib\net45\SharpFont.dll</HintPath>
     </Reference>
@@ -130,6 +133,7 @@
     <Compile Include="Shaders\MainShader.cs" />
     <Compile Include="SoundManager.cs" />
     <Compile Include="Sprite.cs" />
+    <Compile Include="State.cs" />
     <Compile Include="Texture.cs" />
     <Compile Include="Window.cs" />
   </ItemGroup>
