--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Game.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Hotkey.cs" />
+    <Compile Include="LeaderBoardUI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shader.cs" />
