--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -117,6 +117,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnimatedSprite.cs" />
     <Compile Include="DrawnButton.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Game.cs" />
@@ -194,6 +195,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Textures\Pixel.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Textures\Ships\Uk\UKBomber1gun.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Textures\Test.png">
