--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -210,6 +210,9 @@
     <Content Include="Textures\Projectiles\Projectile1.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Textures\Ships\Germany\GERBomber1gun.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Textures\Ships\Uk\UKBomber1gun.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
