--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Level.cs" />
     <Compile Include="LeaderBoardUI.cs" />
     <Compile Include="Powerup\Pickupable.cs" />
+    <Compile Include="Powerup\Restore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shader.cs" />
