--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Shaders\BasicPostShader.cs" />
     <Compile Include="Shaders\BlurShader.cs" />
     <Compile Include="Shaders\MainShader.cs" />
+    <Compile Include="Ships\AA.cs" />
     <Compile Include="Ships\EnemyPlane.cs" />
     <Compile Include="Ships\TestEnemy.cs" />
     <Compile Include="Ships\Plane.cs" />
@@ -146,6 +147,7 @@
     <Compile Include="Sprite.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Texture.cs" />
+    <Compile Include="Waves\AAWave.cs" />
     <Compile Include="Waves\BasicWave.cs" />
     <Compile Include="Weapons\Projectile.cs" />
     <Compile Include="Window.cs" />
