--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -205,6 +205,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Textures\Maps\MapLondonDortmund.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Textures\Pixel.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
