--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -209,6 +209,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Textures\Maps\Clouds1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Textures\Maps\MapLondonDortmund.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
