Added ground AA texture

--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -233,6 +233,9 @@
     <Content Include="Textures\Ships\Germany\GERAABoat.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Textures\Ships\Germany\GERAAGround.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Textures\Ships\Germany\GERBomber1gun.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
