--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -221,6 +221,9 @@
     <Content Include="Textures\Maps\Clouds3.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Textures\Maps\MapJapanUSA.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Textures\Maps\MapLondonDortmund.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
