--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Powerup\Restore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Radar.cs" />
     <Compile Include="Shader.cs" />
     <Compile Include="Shaders\BasicPostShader.cs" />
     <Compile Include="Shaders\BlurShader.cs" />
@@ -233,6 +234,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Textures\Projectiles\Projectile1.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Textures\RadarBackground.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Textures\Ships\Germany\GERAABoat.png">
