--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Hotkey.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="LeaderBoardUI.cs" />
+    <Compile Include="Levels\JapanToUSA.cs" />
     <Compile Include="Levels\LondonToDortmund.cs" />
     <Compile Include="Powerup\Pickupable.cs" />
     <Compile Include="Powerup\Restore.cs" />
