--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -220,7 +220,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Textures\Explosion.png" />
+    <Content Include="Textures\Explosion.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Textures\Maps\Clouds1.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
