--- a/csOpenGL/LD47.csproj
+++ b/csOpenGL/LD47.csproj
@@ -125,6 +125,7 @@
     <Compile Include="DrawnButton.cs" />
     <Compile Include="EnemyWave.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="Explosion.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="Hotkey.cs" />
